# ai-dev-exp

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/: checkin  deployment  github  token-optimization
.cursor/: commands
.cursor/skills/: checkin  deployment  github  token-optimization  usage-limits
.github/workflows/: ci.yml
claude/skills/token-optimization/: SKILL.md
cursor/commands/: usage-status.md
cursor/skills/checkin/: SKILL.md
cursor/skills/token-optimization/: SKILL.md  reference.md
cursor/skills/usage-limits/: SKILL.md
editors/cursor-anthropic-rate/: extension.js  package.json
scripts/: open-cursor-usage.sh
src/ai_dev_exp/: __init__.py  anthropic_rate.py  cli.py  cursor_context.py  paths.py  token_hook.py  token_report.py
src/ai_dev_exp/skills/: __init__.py  base.py
src/ai_dev_exp/skills/checkin/: __init__.py
src/ai_dev_exp/skills/deployment/: __init__.py
src/ai_dev_exp/skills/github/: __init__.py
tests/: test_anthropic_rate.py  test_cursor_context.py  test_skills.py  test_token_hook.py
